packages/svelte/tests/compiler-errors/samples/store-prevent-user-declarations/_config.js
import { test } from '../../test';

export default test({
	skip: true,
	error: {
		code: '',
		message: 'The $ prefix is reserved, and cannot be used for variable and import names'
	}
});
